# kaizhang.github.io

./: .gitmodules  .travis.yml  CNAME  cabal.project.freeze  cv.html  index.html  kaizhang-website.cabal  publications.html  publications_selected.html  stack.yaml  taiji-web.cabal
.github/workflows/: ci.yml
compiler/: Main.hs
compiler/Lib/: BibTeX.hs  Types.hs
compiler/Lib/Compiler/: CV.hs  Publication.hs
data/: people.yml  publications.bib
static/css/: app.css
web/pages/: cv.md  index.html  install.rst  publications.bib  publications.md  publications_selected.md
web/pages/notes/: build_network.rst  statistical_significance.md
web/static/css/: _settings.scss  app.scss
web/templates/: cv.html  default.html  footer.html  header.html  nav.html
