name:               kaizhang-website
version:            0.1.0
author:             Kai Zhang
maintainer:         kai@kzhang.org
copyright:          (c) 2018 Kai Zhang
build-type:         Simple
cabal-version:      >= 1.10

executable kzhang
  main-is:          Main.hs
  other-modules:    Lib.Compiler.CV
  hs-source-dirs:   compiler
  build-depends:    base == 4.*
                  , hakyll > 4.13
                  , hakyll-sass
                  , pandoc-types
  ghc-options:      -threaded
  default-language: Haskell2010
