name:               kaizhang-website
version:            0.1.0
author:             Kai Zhang
maintainer:         kai@kzhang.org
copyright:          (c) 2022 Kai Zhang
build-type:         Simple
cabal-version:      >= 1.10

executable kzhang
  main-is:          Main.hs
  other-modules:    Lib.BibTeX
                    Lib.Compiler.Publication
                    Lib.Types
  hs-source-dirs:   compiler
  build-depends:    base == 4.*
                  , bytestring
                  , blaze-html
                  , containers
                  , citeproc
                  , data-default
                  , doclayout
                  , hakyll > 4.13
                  , hakyll-sass
                  , mtl
                  , pandoc > 2.16
                  , pandoc-types
                  , safe
                  , split
                  , text
                  , time
                  , yaml
  ghc-options:      -threaded
  default-language: Haskell2010
